--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "cv-erick-watanabe",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,8 +10,11 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
+    "@nuxt/devtools": "1.0.0-beta.0",
     "@nuxt/ui": "^2.8.1",
     "nuxt": "^3.7.3"
+  },
+  "dependencies": {
+    "@nuxtjs/tailwindcss": "^6.8.0"
   }
 }
