--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
         "@eslint/eslintrc": "^2.1.2",
         "@nuxt/devtools": "1.0.0-beta.0",
         "eslint": "^8.50.0",
+        "eslint-plugin-consistent-default-export-name": "^0.0.15",
+        "eslint-plugin-lodash": "^7.4.0",
+        "eslint-plugin-promise": "^6.1.1",
         "eslint-plugin-tailwindcss": "^3.13.0",
         "typescript": "^5.2.2"
     }
