--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "generate": "nuxt generate",
         "preview": "nuxt preview",
         "postinstall": "nuxt prepare",
-        "lint": "eslint ."
+        "lint": "eslint .",
+        "check": "vue-tsc"
     },
     "dependencies": {
         "@nuxt/ui": "^2.8.1",
@@ -25,6 +26,7 @@
         "eslint-plugin-lodash": "^7.4.0",
         "eslint-plugin-promise": "^6.1.1",
         "eslint-plugin-tailwindcss": "^3.13.0",
-        "typescript": "^5.2.2"
+        "typescript": "^5.2.2",
+        "vue-tsc": "^1.8.15"
     }
 }
