--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "eslint-plugin-consistent-default-export-name": "^0.0.15",
         "eslint-plugin-lodash": "^7.4.0",
         "eslint-plugin-promise": "^6.1.1",
+        "eslint-plugin-sonarjs": "^0.21.0",
         "eslint-plugin-tailwindcss": "^3.13.0",
         "typescript": "^5.2.2",
         "vue-tsc": "^1.8.15"
