--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
         "check": "vue-tsc"
     },
     "dependencies": {
+        "@loonguo/rollup-plugin-raw": "^0.0.5",
         "@nuxt/ui": "^2.9.0",
         "@nuxtjs/tailwindcss": "^6.8.0",
+        "@vueuse/core": "^10.4.1",
+        "@vueuse/nuxt": "^10.4.1",
         "lodash": "^4.17.21",
-        "nuxt": "^3.7.4"
+        "nuxt": "^3.7.4",
+        "shikiji": "^0.6.8"
     },
     "devDependencies": {
         "@antfu/eslint-config": "1.0.0-beta.21",
         "@eslint/eslintrc": "^2.1.2",
         "@nuxt/devtools": "1.0.0-beta.0",
+        "@types/lodash": "^4.14.199",
         "eslint": "^8.50.0",
         "eslint-plugin-consistent-default-export-name": "^0.0.15",
         "eslint-plugin-lodash": "^7.4.0",
