feat: update tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
     // https://nuxt.com/docs/guide/concepts/typescript
     "extends": "./.nuxt/tsconfig.json",
     "compilerOptions": {
-        "noErrorTruncation": true
+        "noErrorTruncation": true,
+        "strict": true,
+        "strictNullChecks": true
     }
 }
