--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@loonguo/rollup-plugin-raw": "^0.0.5",
         "@nuxt/ui": "^2.9.0",
+        "@nuxtjs/i18n": "8.0.0-rc.5",
         "@nuxtjs/tailwindcss": "^6.8.0",
         "@vueuse/core": "^10.4.1",
         "@vueuse/nuxt": "^10.4.1",
