--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
         "check": "vue-tsc"
     },
     "dependencies": {
+        "@iconify/json": "^2.2.127",
         "@loonguo/rollup-plugin-raw": "^0.0.5",
         "@nuxt/ui": "^2.9.0",
         "@nuxtjs/i18n": "8.0.0-rc.5",
         "@nuxtjs/tailwindcss": "^6.8.0",
+        "@pinia/nuxt": "^0.4.11",
+        "@vue-macros/nuxt": "^1.9.2",
         "@vueuse/core": "^10.5.0",
         "@vueuse/nuxt": "^10.5.0",
         "lodash": "^4.17.21",
         "nuxt": "^3.7.4",
+        "nuxt-typed-router": "^3.3.1",
+        "pinia": "^2.1.6",
         "shikiji": "^0.6.10"
     },
     "devDependencies": {
